# noseyparker

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml
crates/bstring-serde/: Cargo.toml
crates/bstring-serde/src/: lib.rs
crates/content-guesser/: Cargo.toml
crates/content-guesser/src/: error.rs  guesser.rs  input.rs  lib.rs  output.rs
crates/input-enumerator/: Cargo.toml
crates/input-enumerator/src/: blob_appearance.rs  bstring_table.rs  git_commit_metadata.rs  git_metadata_graph.rs  git_repo_enumerator.rs  lib.rs
crates/noseyparker/: Cargo.toml
crates/noseyparker-cli/: Cargo.toml  build.rs
crates/noseyparker-cli/src/: args.rs  cmd_annotations.rs  cmd_datastore.rs  cmd_generate.rs  cmd_github.rs  cmd_json_schema.rs  cmd_report.rs  cmd_rules.rs  cmd_scan.rs  cmd_summarize.rs  main.rs  reportable.rs  rule_loader.rs  util.rs
crates/noseyparker-cli/src/cmd_generate/: cmd_generate_json_schema.rs  cmd_generate_manpages.rs  cmd_generate_shell_completions.rs
crates/noseyparker-cli/src/cmd_report/: human_format.rs  mod.rs  sarif_format.rs  styles.rs
crates/noseyparker-cli/src/cmd_rules/: cmd_rules_check.rs  cmd_rules_list.rs
crates/noseyparker-cli/tests/: test_noseyparker.rs  test_noseyparker_help.rs
crates/noseyparker-cli/tests/common/: mod.rs
crates/noseyparker-cli/tests/datastore/: mod.rs
crates/noseyparker-cli/tests/datastore/snapshots/: test_noseyparker__datastore__export_empty-2.snap  test_noseyparker__datastore__init-2.snap  test_noseyparker__datastore__init-3.snap  test_noseyparker__datastore__init.snap
crates/noseyparker-cli/tests/generate/: mod.rs
crates/noseyparker-cli/tests/generate/snapshots/: test_noseyparker__generate__generate_json_schema.snap
crates/noseyparker-cli/tests/github/: mod.rs
crates/noseyparker-cli/tests/github/snapshots/: test_noseyparker__github__github_repos_list_all_organizations_no_api_url3-2.snap  test_noseyparker__github__github_repos_list_all_organizations_no_api_url3-3.snap  test_noseyparker__github__github_repos_list_all_organizations_no_api_url3.snap  test_noseyparker__github__github_repos_list_org_badtoken-3.snap
crates/noseyparker-cli/tests/help/: mod.rs
crates/noseyparker-cli/tests/help/snapshots/: test_noseyparker__help__help-2.snap  test_noseyparker__help__help_datastore-2.snap  test_noseyparker__help__help_github-2.snap  test_noseyparker__help__help_github_repos-2.snap  test_noseyparker__help__help_github_repos_short-2.snap  test_noseyparker__help__help_github_short-2.snap  test_noseyparker__help__help_nogithub-2.snap  test_noseyparker__help__help_report-2.snap  test_noseyparker__help__help_report_short-2.snap  test_noseyparker__help__help_rules-2.snap  test_noseyparker__help__help_scan-2.snap  test_noseyparker__help__help_scan_nogithub-2.snap  test_noseyparker__help__help_scan_nogithub.snap  test_noseyparker__help__help_short-2.snap  (+13 more)
crates/noseyparker-cli/tests/report/: mod.rs
crates/noseyparker-cli/tests/rules/: mod.rs
crates/noseyparker-cli/tests/scan/: mod.rs
crates/noseyparker-cli/tests/snapshots/: test_noseyparker_github__github_repos_list_noargs-3.snap  test_noseyparker_help__help_datastore-2.snap  test_noseyparker_help__help_github_repos-2.snap  test_noseyparker_help__help_report_short-3.snap  test_noseyparker_help__no_args.snap  test_noseyparker_help__version_command-3.snap  test_noseyparker_help__version_command.snap  test_noseyparker_help__version_long-2.snap  test_noseyparker_help__version_short-3.snap  test_noseyparker_help__version_short.snap  test_noseyparker_scan__scan_secrets1-6.snap  test_noseyparker_scan__test_scan_git_url__ssh_scheme-3.snap
crates/noseyparker-content-guesser/: Cargo.toml
crates/noseyparker-content-guesser/src/: error.rs  guesser.rs  input.rs  lib.rs  output.rs
crates/noseyparker-digest/: Cargo.toml
crates/noseyparker-digest/src/: lib.rs
crates/noseyparker-rules/: Cargo.toml
crates/noseyparker-rules/src/: lib.rs  rule.rs  rules.rs  ruleset.rs  rulesets.rs  util.rs
crates/noseyparker/data/default/: ignore-secrets.conf  ignore.conf
crates/noseyparker/src/: blob.rs  blob_id.rs  blob_id_map.rs  blob_id_set.rs  blob_metadata.rs  bstring_escape.rs  datastore.rs  defaults.rs  digest.rs  git_binary.rs  git_commit_metadata.rs  git_metadata_graph.rs  git_url.rs  github.rs  ignore_secrets.rs  input_enumerator.rs  lib.rs  location.rs  match_type.rs  matcher.rs  matcher_stats.rs  progress.rs  provenance.rs  provenance_set.rs  rule_profiling.rs  rules.rs  rules_database.rs  snippet.rs  utils.rs
crates/noseyparker/src/datastore/: annotation.rs  finding_data.rs  finding_metadata.rs  finding_summary.rs  mod.rs  schema.sql  schema_60.sql  schema_70.sql  status.rs
crates/noseyparker/src/github/: auth.rs  client.rs  client_builder.rs  error.rs  mod.rs  models.rs  repo_enumerator.rs
crates/noseyparker/src/input_enumerator/: git_repo_enumerator.rs
crates/progress/: Cargo.toml
crates/progress/src/: lib.rs
crates/vectorscan/: Cargo.toml  README.md
crates/vectorscan-sys/: .gitattributes  Cargo.toml  README.md  build.rs  vectorscan.patch  wrapper.h
crates/vectorscan-sys/src/: bindings.rs
crates/vectorscan-sys/vectorscan/: .gitignore  CHANGELOG-vectorscan.md  CMakeLists.txt  Contributors-vectorscan.md  Jenkinsfile  README.md  libhs.pc.in
crates/vectorscan-sys/vectorscan/benchmarks/: benchmarks.cpp
crates/vectorscan-sys/vectorscan/cmake/: archdetect.cmake  cflags-arm.cmake  cflags-generic.cmake  cflags-ppc64le.cmake  cflags-x86.cmake  compiler.cmake  osdetection.cmake  platform.cmake  ragel.cmake  sanitize.cmake  sqlite3.cmake
crates/vectorscan-sys/vectorscan/src/: dispatcher.c  hs.cpp  hs.h  hs_valid_platform.c  hs_version.h.in  ue2common.h
crates/vectorscan-sys/vectorscan/unit/: CMakeLists.txt
crates/vectorscan-sys/vectorscan/util/: CMakeLists.txt  ExpressionParser.cpp  ExpressionParser.rl  cross_compile.cpp  expressions.cpp
crates/vectorscan/src/: error.rs  native.rs  wrapper.rs
(+776 files in other folders)
