[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.70"

license = "Apache-2.0"
authors = ["Brad Larsen <bradford.larsen@praetorian.com>"]

homepage = "https://github.com/praetorian-inc/noseyparker"
repository = "https://github.com/praetorian-inc/noseyparker"

version = "0.16.0"

publish = false


[profile.release]
# Generate debug symbols even in release builds
# Used for cargo-instruments: https://github.com/cmyr/cargo-instruments
# debug = true
# split-debuginfo = "packed"
lto = "thin"
opt-level = 3  # default for release profile


# Insta benefits from being compiled in release mode, even as dev dependency.
[profile.dev.package.insta]
opt-level = 3

# The `similar` dependency that Insta uses also benefits from being compiled in
# release mode, even as dev dependency.
[profile.dev.package.similar]
opt-level = 3

# `vectorscan` and `vectorscan-sys` benefit from being build in release mode,
# even as a dev dependency: doing so saves about 6 seconds on each integration
# test case!
[profile.dev.package.vectorscan]
opt-level = 3
[profile.dev.package.vectorscan-sys]
opt-level = 3
