[package]
name = "bstring-serde"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version = "0.0.0"
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.22" }
bstr = { version = "1.0", features = ["serde"] }
schemars = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.0"
serde_json = "1.0"
