[package]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

name = "content_guesser"
version.workspace = true

[features]
libmagic = ["magic"]

[lib]
path = "src/lib.rs"

[dependencies]
magic = { version = "0.13", optional = true }
mime_guess = "2"
mime = "0.3"
thiserror = "1"
