[package]
name = "input-enumerator"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version = "0.0.0"
publish.workspace = true

[dependencies]
progress = { path = "../progress" }

anyhow = { version = "1.0" }
bstr = { version = "1.0", features = ["serde"] }
bstring-serde = { path = "../bstring-serde" }
fixedbitset = "0.4"

gix = { version = "0.56", features = ["max-performance", "serde"] }

ignore = "0.4"
petgraph = "0.6"
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.11", features = ["const_generics", "const_new", "union"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.3"
proptest = "1.0"
