[package]
name = "input-enumerator"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version = "0.0.0"
publish.workspace = true

[dependencies]
anyhow = { version = "1.0" }
bstr = { version = "1.0", features = ["serde"] }
bstring-serde = { path = "../bstring-serde" }
crossbeam-channel = "0.5"
fixedbitset = "0.5"
gix = { version = "0.70", features = ["max-performance", "serde"] }
ignore = "0.4"
petgraph = "0.7"
roaring = "0.10"
schemars = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1", features = ["const_generics", "const_new", "union"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.3"
# proptest = "1.0"
