[package]
name = "input-enumerator"
authors.workspace = true
edition = "2021"
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { version = "1.0" }
bstr = { version = "1", features = ["serde"] }
bstring-serde = { path = "../bstring-serde" }
crossbeam-channel = "0.5"
fixedbitset = "0.5"
gix = { version = "0.73", features = ["max-performance", "serde"] }
gix-date = "0.10"
ignore = "0.4"
petgraph = "0.8"
roaring = "0.11"
schemars = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1", features = ["const_generics", "const_new", "union"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
# proptest = "1.0"
