[package]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

name = "noseyparker-cli"
version.workspace = true
description = "Nosey Parker is a command-line program that finds secrets and sensitive information in textual data and Git history."

# at most 5
keywords = ["cli", "security", "scanner", "secret"]

# must match one of these list items: https://crates.io/category_slugs; at most 5
categories = ["command-line-utilities"]

build = "build.rs"


[features]
# Enable scan-time per-rule profiling instrumentation
rule_profiling = ["noseyparker/rule_profiling"]

# Enable the file content classifier based on `libmagic`
# Requires a aystem-wide `libmagic` to be available
libmagic = ["content-guesser/libmagic"]

# Compile out `trace`-level log and tracing messages in release builds
disable_trace = ["log/release_max_level_debug", "tracing/release_max_level_debug"]

# Enable features that are desirable in a release build
release = ["disable_trace"]


[build-dependencies]
# Used for embedding compile-time version information into the `noseyparker` CLI
vergen = { version = "8.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[dependencies]

# anyhow = { version = "1.0", features = ["backtrace"] }   # add backtraces to errors -- not sure how expensive this is
anyhow = { version = "1.0" }
bstr = { version = "1.0" }
clap = { version = "4.3", features = ["cargo", "derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.4"
console = "0.15"
content-guesser = { path = "../content-guesser" }
crossbeam-channel = "0.5"
indenter = "0.3"
indicatif = { version = "0.17", features = ["improved_unicode"] }
indoc = "2.0"
input-enumerator = { path = "../input-enumerator" }
lazy_static = "1.4"
log = { version = "0.4", optional = true }
mimalloc = "0.1"
mime = "0.3"
noseyparker = { path = "../noseyparker" }
noseyparker-rules = { path = "../noseyparker-rules" }
prettytable-rs = "0.10"
progress = { path = "../progress" }
rayon = "1.5"
regex = "1.7"
rlimit = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-sarif = "0.4"
strum = { version = "0.25", features = ["derive"] }
time = "0.3"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "ansi", "env-filter", "smallvec", "fmt"], default_features = false }
url = "2.3"
vectorscan = { path = "../vectorscan" }

[dev-dependencies]
assert_cmd = { version = "2.0", features = ["color-auto"] }
assert_fs = "1.0"
# criterion = "0.4"
# escargot = "0.5"  # NOTE: much more capable but much slower than assert_cmd for `cargo run` tests
insta = { version = "1.34", features = ["filters", "json", "redactions"] }
predicates = "3.0"
pretty_assertions = "1.3"

# NOTE: See cargo-license to list dependency licenses: https://github.com/onur/cargo-license
