[package]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true

name = "noseyparker_content_guesser"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
magic = "0.13"
mime_guess = "2"
mime = "0.3"
