[package]
name = "noseyparker-digest"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version = "0.0.0"
publish.workspace = true

[dependencies]
gix-features = "0.40"
hex = "0.4"

[dev-dependencies]
pretty_assertions = "1.3"
