[package]
name = "noseyparker-rules"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version = "0.0.0"
publish.workspace = true

[dependencies]
anyhow = { version = "1.0" }
ignore = "0.4"
lazy_static = "1.4"
noseyparker-digest = { path = "../noseyparker-digest" }
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.3"
proptest = "1.0"
