[package]
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish.workspace = true

license = "Apache-2.0 OR MIT"
name = "vectorscan-sys"
version.workspace = true

build = "build.rs"

[features]
# The `gen` features causes `bindgen` to run to produce the raw Rust bindings to Vectorscan.
gen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.64.0", optional = true }
cmake = "0.1"

[lib]
doctest = false
